// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should only render theme 1`] = `
"<style>
  .doNotTouch {
    color: red;
  }
</style>

,,,,

,,,,
"
`;

exports[`parse() 1`] = `
Object {
  "customBlocks": Array [],
  "script": Object {
    "attrs": Object {
      "abc": "123",
    },
    "content": "
export default {
}
",
    "end": 93,
    "start": 70,
    "type": "script",
  },
  "styles": Array [
    Object {
      "attrs": Object {
        "test": "true",
      },
      "content": "
.Component {
  color: red;
}
",
      "end": 165,
      "start": 125,
      "type": "style",
    },
    Object {
      "attrs": Object {},
      "content": "",
      "end": 184,
      "start": 184,
      "type": "style",
    },
  ],
  "template": Object {
    "attrs": Object {
      "test": "213",
    },
    "content": "
.Component
",
    "end": 37,
    "start": 21,
    "type": "template",
  },
}
`;

exports[`removeOtherThemes() not modify anything if theme undefined 1`] = `
"<template test=\\"213\\">
  .Component
</template>

<script abc=\\"123\\">
export default {
}
</script>

<style test=\\"true\\">
  .Component {
    color: red;
  }
</style>

<style></style>
"
`;

exports[`removeOtherThemes() should remove unmatching theme 1`] = `
"<style>
  .doNotTouch {
    color: red;
  }
</style>

,,,,

,,,,
"
`;

exports[`removeStyleBlock() 1`] = `
"<style>
  .doNotTouch {
    color: red;
  }
</style>

,,,,

<style theme=\\"brand2\\">
  .headline {
    color: green;
  }
</style>
"
`;
